apps/longhorn/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system-new
  labels:
    pod-security.kubernetes.io/enforce: privileged
