apps/longhorn/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
spec:
  tls:
  - hosts:
    - longhorn.invertedorigin.com
    secretName: longhorn-tls-domain
  rules:
  - host: longhorn.invertedorigin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
